--- a/wp-content/themes/sutunam/scss/global/_general.scss
+++ b/wp-content/themes/sutunam/scss/global/_general.scss
@@ -149,19 +149,19 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-@media (max-width: $laptop - 1) and (min-width: $mobile + 1) {
+@include small-bp($mobile + 1, $laptop - 1) {
     .visible-sm {
         display: block !important;
     }
 }
 
-@media (max-width: $tablet - 1){
+@include bp(max-width, $tablet - 1) {
     .visible-xs {
         display: none !important;
     }
 }
 
-@media (max-width: $mobile){
+@include bp(max-width, $mobile) {
     .visible-xs {
         display: block !important;
     }
